[tool.poetry]
name = "minpaku-reporter"
version = "0.1.0"
description = "A small tool to automate minpaku report"
authors = ["AceBee007 <zykgcz@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
